<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.vinilos.ui.viewmodels.CollectorViewModel" />
        <variable
            name="collector"
            type="com.example.vinilos.data.models.Collector" />
    </data>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnCollectorDetailBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/back_collector"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvCollectorDetailHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/collectors_bottom_nav"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@id/btnCollectorDetailBack"
                app:layout_constraintBottom_toBottomOf="@id/btnCollectorDetailBack"
                app:layout_constraintStart_toEndOf="@id/btnCollectorDetailBack" />

            <TextView
                android:id="@+id/tvAlbumDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tvCollectorDetailHeaderTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@{collector.name}"/>

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/email_collectors"
                android:src="@drawable/baseline_email_24"
                app:layout_constraintTop_toBottomOf="@id/tvAlbumDetailTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvEmailCollector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@{collector.email}"
                android:textColor="@color/hint_text"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@id/ivEmail"
                app:layout_constraintBottom_toBottomOf="@id/ivEmail"
                app:layout_constraintStart_toEndOf="@id/ivEmail" />

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/phone_collectors"
                android:src="@drawable/baseline_local_phone_24"
                app:layout_constraintTop_toBottomOf="@id/tvEmailCollector"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvPhoneCollector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@{collector.telephone}"
                android:textColor="@color/hint_text"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@id/ivPhone"
                app:layout_constraintBottom_toBottomOf="@id/ivPhone"
                app:layout_constraintStart_toEndOf="@id/ivPhone" />

            <TextView
                android:id="@+id/tvArtistsFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/fav_artists_collectors"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toTopOf="@id/rvArtistList"
                app:layout_constraintBottom_toBottomOf="@id/tvPhoneCollector"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArtistList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvArtistsFav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvComments"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"/>

            <TextView
                android:id="@+id/tvComments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/color_text"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/comments_title"
                app:layout_constraintTop_toBottomOf="@id/rvArtistList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCommentsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvComments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
